@@ -55,12 +55,14 @@ class Log : public QList<LogLine>
   bool musicLinked() const;
   int trafficLinks() const;
   bool trafficLinked() const;
+  void insert(int row,unsigned cartnum);
   void insert(int row,LogLine ll);
   bool load(const QString &name,QString *err_msg);
   bool save(const QString &name,QString *err_msg);
   void update();
 
  private:
+  int GetNextId();
   void SetStartTimes();
   QString log_name;
   QString log_service_name;
